Endgame: Singularity Changelog

V1.XX (2020.XX.XX):

USER-VISIBLE CHANGES:
- Fix a regression where changing the language in game would
  fail to update the tech names and descriptions.
  (Closes: #232) (nthykier)
- Fix crash in the Load dialog when clicking Load if no game
  was selected.  (nthykier)
- When building bases or CPU for a base, show the correct CPU
  provided when the base/CPU is constructed.  Previously it would
  not take location and base modifiers into account. T hanks to
  Wuzzy2 for reporting the issue.  (Closes: #230) (nthykier)
- Fix bug where clicking Cancel in the Options menu would still
  commit changes to selected warnings.  Thanks to Wuzzy2 for
  reporting the issue.  (Closes: #230) (nthykier)
- Use correct number separator for money under non-English
  locales (e.g. comma in German) when measured in millions
  or more. Thanks to Wuzzy2 for reporting the issue.
  (Closes: #226) (nthykier)
- Ensure that the about menu text is extracted for translations
  Thanks to Wuzzy2 for reporting its absence.  (Closes: #218)
  (nthykier)
- Fix a bug where part of the tech description in the Knowledge
  menu was not translatable.  Thanks to Wuzzy2 for reporting it.
  (Closes: #217) (nthykier)
- Fix overly precise durations due to missing rounding when
  displaying construction times in Python3.  Thanks to
  Wuzzy2 for reporting it.  (Closes: #222)  (nthykier)
- Make scrollbar arrows visible in "Nightmode" theme.
  Thanks to Wuzzy2 for reporting it.  (Closes: #221)
  (nthykier)
- Add updated German translation.  (Closes: #215, #223)
  (Wuzzy2)
- Fix bug where "Concepts" in the "Knowledge" menu was not
  translatable.  (Closes: #216)  (nthykier)

v1.0b1 (2020.02.16):

USER-VISIBLE CHANGES:
- Show a summary of the bases under the CPU and money display.
  (Closes: #155, #196)  (nthykier)
- Fix a bug where Australia would never get a modifier if the game
  was created with python3.  (nthykier)